kubernetes/components/prometheus-operator/local/kustomization/alertmanager/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-route
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  hostnames:
    - alertmanager.local
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway
      namespace: default
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-alertmanager
          port: 9093
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
